--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
     "tailwindcss": "^4.0.4",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
