--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
+    "react-virtuoso": "^4.12.7",
     "tailwindcss": "^4.0.4",
     "uuid": "^11.0.5",
     "xml2js": "^0.6.2"
