--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/logo.png"
+    "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/logo.png",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
@@ -34,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.0.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
